--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,13 @@
     "type": "phpstan-extension",
     "license": "MIT",
     "require": {
-        "php": "^8.2",
-        "phpstan/phpstan": "^2.0"
+        "php": "^8.2"
     },
     "require-dev": {
         "laravel/pint": "^1.27",
         "orchestra/testbench": "^10.0",
-        "pestphp/pest": "^4.0"
+        "pestphp/pest": "^4.0",
+        "phpstan/phpstan": "^2.1"
     },
     "autoload": {
         "psr-4": {
@@ -37,7 +37,5 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
