--- a/tests/phpstan-test.neon
+++ b/tests/phpstan-test.neon
@@ -5,3 +5,6 @@ parameters:
     level: 8
     paths:
         - Unit
+    pestPhpstanTypedThis:
+        parsePestPropertyTags: true
+        parsePhpDocProperties: true
