--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,14 @@
     "type": "phpstan-extension",
     "license": "MIT",
     "require": {
-        "php": "^8.2"
+        "php": "^8.4"
     },
     "require-dev": {
         "laravel/pint": "^1.27",
         "orchestra/testbench": "^10.0",
         "pestphp/pest": "^4.0",
-        "phpstan/phpstan": "^2.1"
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-phpunit": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -23,7 +24,8 @@
         }
     },
     "scripts": {
-        "phpstan": "vendor/bin/phpstan --configuration=phpstan.neon.dist"
+        "phpstan": "vendor/bin/phpstan --configuration=phpstan.neon.dist",
+        "phpstan:clear": "vendor/bin/phpstan clear-result-cache"
     },
     "extra": {
         "phpstan": {
